--- a/farol.html
+++ b/farol.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semáforo</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <div>
-            <img src="desligado.png" id='img' >
+            <img src="imagens/semáfaro.png" id='img' >
         </div>
         <div id='buttons'>
             <button id='red' class="button" >Vermelho</button>
@@ -18,7 +19,11 @@
             <button name='auto' id='automatic' class="button" >Automático</button>
         </div>
     </main>
+    <footer>
+        <p>&copy; <a href="https://github.com/Washington-Fabiano" target="_blank" rel="external">Washington Fabiano</a></p>
+    </footer>
 
     <script src="./semaforo.js"></script>
+     
 </body>
 </html>
