--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div>
+        <div class="img">
             <img src="imagens/semáfaro.png" id='img' >
         </div>
         <div id='buttons'>
