--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Semáforo</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <main>
-        <div class="img">
-            <img src="imagens/semáfaro.png" id='img' >
+        <div class="d-flex justify-content-center">
+            <img src="imagens/semáfaro.png" id='img' class="w-75 p-3">
         </div>
         <div id='buttons'>
             <button id='red' class="button" >Vermelho</button>
@@ -24,6 +25,6 @@
     </footer>
 
     <script src="./semaforo.js"></script>
-     
+
 </body>
 </html>
